# aexis

./: .env.example  .gitignore  README.md  reproduce_issue.py  update_network_weights.py  verify_architecture.py
.agent/rules/: implementation-guide-gravity.md
.github/instructions/: implementation-guide-vs.instructions.md
.windsurf/rules/: implementation-guide.md
aexis/: README.md  aexis.json  main.py  pyproject.toml
aexis/api/: main.py  routes.py
aexis/cli/: console.py
aexis/core/: __init__.py  ai_provider.py  errors.py  message_bus.py  model.py  network.py  pod.py  routing.py  station.py  system.py
aexis/tests/: conftest.py  test_comprehensive.py  test_critical_features.py  test_integration_flow.py  test_pod_refactor.py  test_pod_routing_integrated.py
aexis/web/: dashboard.py  main.py
aexis/web/static/: app.js  index.html  network.json  visualizer.js
aexis/web/static/src/: app.ts  visualizer.ts
docs/: api.md  architecture.md  graph-visualization.md  setup.md  system_behaviour.md
