[project]
name = "aexis"
version = "0.1.0"
description = "Add your description here"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.57.0",
    "networkx>=3.6.1",
    "redis>=5.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
]

[dependency-groups]
dev = [
    "pytest==8.4.1",
]
